# Mapping_Tese

./: .dockerignore  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
mapping_tese/images/SVC_vs_ANN/: balanced_accuracy_stats_summary.csv  per_fold_balanced_accuracy_long.csv  per_subject_balanced_accuracy_table_rounded.csv  per_subject_report.txt  stats_normality_diff.csv  stats_paired_ttest.csv  stats_wilcoxon.csv
mapping_tese/notebooks/: 01_decoding_sub-p0001_ses-01_task-S1Map.ipynb  4Classes_ANN_decoding_taskS1Map.ipynb  4Classes_ANN_decoding_v2_taskS1Map.ipynb  ANN_decoding_taskS1Map.ipynb  Test_ANNModels_sub-p0002_taskS1Map.ipynb  decoding_sub-combined_task-S1Map.ipynb  decoding_sub-p0001_task-S1Map.ipynb  model_comparison_4Classes_ANN_decoding_taskS1Map.ipynb
mapping_tese/notebooks/ANN/: 4Classes_ANN_ICA_v1_taskS1Map.ipynb  4Classes_ANN_decoding_v2_taskS1Map.ipynb  Load_best_model_ANN_v2.ipynb  SHAP_ANN_4Classes_decoding_taskS1Map.ipynb  model_comparison_4Classes_ANN_decoding_taskS1Map.ipynb
mapping_tese/notebooks/CNN/: CNN_decoding.ipynb  SHAP_CNN_decoding.ipynb
mapping_tese/notebooks/Comparisons/: SVC_vs_ANN.ipynb
mapping_tese/notebooks/DeepRF/: DeepRF_decoding_taskS1Map.ipynb
mapping_tese/notebooks/GNN/: GNN_4Classes_decoding_taskS1Map.ipynb
mapping_tese/notebooks/SVC/: decoding_sub-p0001_task-S1Map.ipynb
mapping_tese/notebooks/SearchLight/: 4Classes_Searchlight_decoding_taskS1Map.ipynb
mapping_tese/scripts/: open_cm.py
(+480 files in other folders)
