[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mapping_tese"
version = "0.1.0"
description = "Somatosensory Mapping Thesis"
authors = [{ name = "Duarte Fonte-Santa" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]